kubernetes_deploy/staging/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pecs-move-platform-backend-deployment-staging
  namespace: pecs-move-platform-backend-staging
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: pecs-move-platform-backend-web-staging
        tier: frontend
    spec:
      containers:
      - name: webapp
        image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/pecs/pecs-move-platform-backend:master.latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
