kubernetes_deploy/staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pecs-move-platform-backend-service-staging
  namespace: pecs-move-platform-backend-staging
  labels:
    app: pecs-move-platform-backend-web-staging
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000
  selector:
    app: pecs-move-platform-backend-web-staging
